--- a/central_subway.html
+++ b/central_subway.html
@@ -8,94 +8,16 @@
 </head>
 <body>
     <h1>Is Muni’s Central Subway in San Francisco Really Efficient?</h1>
-    <h2>The Background and the Idea (8/6/24)</h2>
-    <p>I’m a massive transit nerd and advocate – I believe that to get ourselves out of the car-centric, polluting cities we’ve built over the past over half a century, better mass transit, and cities built around said mass transit is the way forward. </p>
-    <p>Which brings us to San Francisco, just under an hour north of San Jose where I live in the Bay Area. San Francisco has amazing public transit – a regional metro system, streetcar/light rail, various bus lines, and a commuter rail system set to see massive improvements this year. </p>
-    <p>But here I will focus on the quasi-streetcar / subway / light rail system, known as Muni Metro. Muni Metro is operated by Muni, shorthand for what used to be the San Francisco Municipal Railway, now the San Francisco Municipal Transportation Agency, which operates not just Muni Metro, but the various bus lines crisscrossing throughout the city, as well as the historic cable cars and historic streetcars within the city. </p>
-    <p>Now Muni Metro is not really a “metro” – it is really more of a streetcar / light rail network that runs mostly on the street in mixed traffic, or in street medians, before, with the current exception of the T Third Street line, converges into the Market Street Subway where it runs underground below Market Street. This is what makes Muni Metro so famously unreliable – though it may be quick under Market Street, once it leaves the tunnel, it is at the mercy of pedestrians and cars, as well as traffic lights, significantly slowing trains down and keeping the timetable difficult. </p>
-    <p>Now as mentioned earlier, the T Third Street (from here on, the T) doesn’t run under Market Street. This is due to the recent opening in late 2022 of the Central Subway, a new subway tunnel that runs north-south, just north of 4th and Brannan Street to Chinatown, which the T was rerouted to. </p>
-    <p>Whether the Central Subway was worth it has been a point of discussion amongst many people. The Central Subway is 1.7 mi, or 2.7 km long [1], and cost 1.95 billion dollars, putting the price tag at over a billion dollars per mile for a relatively short distance. Though I believe in spending taxpayer dollars on public transit, money poorly spent is money that could have been spent on another project that would have been better utilized. Another issue are the depths at which the station is located – Chinatown Station is located 100 ft underground [3]. Though this is due to geographical and infrastructure obstacles that were unavoidable, the depth of the stations mean that riders must take multiple minutes simply to either reach the platform or exit the station, costing riders valuable time that the subway was supposed to have saved them in the first place. What really makes this project questionable to many however, is the fact that the 30 Stockton and 45 Union-Stockton, two very busy and popular bus lines already runs nearly the same route that the Central Subway does, but instead of terminating at Chinatown, keeps going further northwest. Add to that the fact that whereas the T runs every 10 minutes, the 30 runs every 7 minutes in the morning and 6 minutes midday, and the 45 runs every 10 minutes morning and midday, and the 30 and 45 seem to be much more reliable for simply showing up and hopping on. While the subway undeniably is more efficient, combine all the above facts with the fact that the T needs to run about half a mile to enter the tunnel while obeying traffic lights, and suddenly, the 30 or 45 seem to be a more reliable route to take. </p>
-    <p>Here, I am going to investigate (at least under the specified conditions), if the Central Subway, in its current form really is a good investment, and a good mode of transportation for commuters and residents of the Bay Area. </p>
-    <p>References</p>
-    <p>[1] - https://www.sfmta.com/projects/central-subway-project</p>
-    <p>[2] - https://www.sfchronicle.com/bayarea/article/central-subway-chinatown-muni-18689710.php</p>
-    <p>[3] - https://www.dlrgroup.com/work/sfmta-central-chinatown-station/</p>
-    <h2>The Experiment (8/6/24)</h2>
-    <p>The average commuter coming into San Francisco who takes the T or the 30 or the 45 will get off the Caltrain station at 4th and King St, and then proceed to get on the T at the station of the same name just across King St, or get on the 30 or 45 at Townsend St & Lusk St.</p>
-    <p>Assuming that the average commuter is an office worker, they will want to get to downtown San Francisco. For this reason, I will choose Union Square as our destination, as it is a popular gathering place downtown, and for most destinations in downtown San Francisco, regardless of whether you take the T or the 30 / 45, the mode of transportation should be more or less the same (one of the other Muni Metro lines or BART). For fairness’ sake, I will choose the Dewey Monument as our goal, as it is at the center of Union Square.</p>
-    <p>To test which option is truly faster, I will on the same day of the week at the same time range, measure the time it takes to get from the Caltrain station, northbound to the Dewey Monument on either the T or the 30 / 45. I will start measuring the time when I leave the doors of the Caltrain station and stop measuring once I reach the Dewey Monument. I will repeat the same trip at least 5 times (the minimum required number of datapoints to perform a statistical analysis in physics) for each mode of transportation, that is subway or bus (T or 30 / 45) and find the mean and standard deviation for each mode. I will then perform a statistical t-test to see if the run times for the subway are statistically significant. As I am going to have to return to the Caltrain station for the beginning of the next run, I will also measure trips in the opposite direction, going southbound. Though this should be a reverse rush-hour trip, it may still yield interesting results and / or findings. The methodology will be identical to the northbound trips. Times will be measured starting at the Dewey monument, and stopped when I reach the doors of the Caltrain station at 4th and King St. As headways are assumed to be theoretically consistent within each Muni line (it is not in real life), to avoid falling into a possible pattern, where once I reach a destination, the time spent waiting for the next train or bus is identical between each runs, I will use different modes of transport on the northbound and southbound trips for a given day. In other words, if I take the T for a northbound trip, I will take the 30 / 45 for the southbound trip. I will keep the mode of transport per direction consistent on a given day. In other words, on the first day (assumed to be 8/8/24, a Thursday), I will take the T northbound, and then take the 30 / 45 southbound from around 9 AM until 12 PM. On another Thursday (likely 8/22/24), I will take the T southbound, and then the 30 / 45 northbound from around 9 AM until 12 PM.</p>
-    <p>This methodology should account for walking distance from the train / bus stop to and from the destination or departure point by including time spent walking within the measured time. By intentionally breaking possible patterns I could fall into in terms of timing for when I return to an origin point to start my next run, I account for headway effectively by randomizing when I show up at the train / bus stop for the next vehicle. This experiment should also account for traffic patterns that both Muni Metro trains and Muni buses get caught up in, by choosing the same day of the week and timeframe in which to conduct both trips. Though the scope of this personal experiment is quite limited as of currently, testing over different distances, such as making the destination farther, like Chinatown, or testing over another time period could be interesting as well. I plan on taking data starting 8/8/24</p>
+    <p>The Central Subway is a new subway tunnel opened for San Francisco's Muni Metro T Third Street Line, connecting the Caltrain regional / commuter line station at 4th and King Street South of Market Street, north to important locations such as Moscone Center, Union Square, and Chinatown. It has been a controversial project however, because of the perceived low returns that the ccompleted project brings relative to the financial investmnet put into it, mainly due to the fact that two important and busy bus routes, the 30 Stockton and 45 Union / Stockton replicate the same route, and in fact, go further than the subway does. In this study, I investigate whether or not the Central Subway really deserves the criticism it gets, and I plan to offer ideas for how it can be improved. Click on the links below in the table of contents to see how the project is progressing so far!</p>
 
-    <h2>Measuring Data (8/12/24)</h2>
-    <p>I took my first set of data points on 8/8/2024, a Thursday. I arrived at San Francisco 4th and King station around 8:00 AM and after having visited an office that a high school friend was interning at, I proceeded to take data around 8:25 AM. As I described in the previous section "The Experiment", for this day, I took a trip from the 4th and King Caltrain station to the Dewey Monument in Union Square using Muni Metro's T Third Street line, routed through the Central Subway at the centerpiece of this project. I then took Muni's 30 Stockton or 45 Union Stockton bus back to the 4th and King Caltrain station. This was repeated 5 times (quite exhausting to be honest, but still quite fun).</p>
-     <figure>
-        <img src="caltrain_station_arrival.jpg" alt="Arrived at the Caltrain Station">
-        <figcaption>Picture from when I started measuring data at the Caltrain Station at 4th and King</figcaption>
-     </figure>
-    <p>I measured not only the total time between starting point and ending point, but time between any signficant events within the trip as well. This was done by simply pressing "lap" on my stopwatch. All of these times between significant events when added together would equal the total time between the starting and ending point.</p>
-    <p>For northbound runs (T Third Street), these times between significant events were</p>
-    <ol>
-    <li>Walk time betweeen Caltrain station to the T platform at 4th and King</li>
-    <li>Wait time on the 4th and King platform for a T train to arrive</li>
-    <li>Ride time between 4th and King to Union Square station on the T</li>
-      <ul>
-      <li>(I started measuring a rough time taken for the train to actually reach the Central Subway tunnel starting on my second run as well)</li>
-    <li>Walk time between Union Square station platform to the Dewey Monument</li>  
-    </ol>
-
-    <p>For southbound runs (30 Stockton / 45 Union Stockton), these times between significant events were</p>
-    <ol>
-    <li>Walk time from the Dewey Monument to the bus stop at Stockton and Geary</li>
-    <li>Wait time at the Stockton and Geary bus stop for the next 30 or 45 to arrive</li>
-    <li>Ride time between Stockton and Geary to Townsend and 4th near the Caltrain station</li>
-    <li>Walk time between Townsend and 4th to the Caltrain station</li>  
-    </ol>
-
-    <p>An overview of the Northbound run involves:</p>
-    <ol>
-    <li>Leaving the Caltrain Station at 4th and King streets. The stopwatch was started the moment I left the doors of the station facing 4th and King streets.</li>
-     <figure>
-        <img src="leaving_caltrain_station.jpg" alt="Leaving the Caltrain Station">
-        <figcaption>I started measuring the time the moment I walked out of the doors at the Caltrain Station facing the intersection of 4th and King streets </figcaption>
-     </figure>
-    <li>Walking to the T platform. This involved crossing two crosswalk, first across King street, and then half of 4th street onto the T platform in the medan of 4th street. The time for "Walk time betweeen Caltrain station to the T platform at 4th and King" stops when I finish climbing the ramp onto the T platform.</li>
-     <figure>
-        <img src="approaching_intersection_to_4th_and_king_crossing.jpg" alt="Approaching the crosswalks at 4th and King streets on my way to the T platform">
-        <figcaption>Approaching the crosswalks at 4th and King streets on my way to the T platform</figcaption>
-     </figure>
-     <figure>
-        <img src="intersection_at_4th_and_king.jpg" alt="Waiting at the crosswalks at 4th and King streets">
-        <figcaption>Waiting to cross the crosswalks at 4th and King streets</figcaption>
-     </figure>
-     <figure>
-        <img src="ramp_to_t_platform_4th_and_king.jpg" alt="The ramp to the T platform at 4th and King">
-        <figcaption>The ramp to the T platform at 4th and King in the median of 4th street, looking North towards Union Square. The entrance to the Central Subway is just visible at the center of the image where an overpass and tunnel entrance exists. Note the Caltrain station on the left side. The moment I got over the ramp, "lap" was clicked on my stopwatch, and time spent walking between the Caltrain and T platform stopped recording, and time spent waiting for the T train started recording.</figcaption>
-     </figure>
-    <li>Waiting for the T Third Street train that would take me to Union Square Station. The moment I get to the T platform, wait time for the T train begins. The wait time for the T ends when I step on the train, and the stopwatch then measures the time I spend on the train to Union Square station.</li>
-    <figure>
-        <img src="t_platform_4th_and_king.jpg" alt="The T platform at 4th and King">
-        <figcaption>Standing on the T platform at 4th and King, waiting for my train, looking South at the direction my train will arrive. Headways on the T are 10 minutes, as detailed in "The Background and the Idea".</figcaption>
-    </figure>
-    <figure>
+ <figure>
         <img src="t_arrival_4th_and_king_(1).jpg" alt="The T arrives at 4th and King">
-        <figcaption>The T train arrives at platform. Time spent waiting ends when I step on the train. The stopwatch then starts measuring the time I spent on the train itself.</figcaption>
+        <figcaption>A T train arriving at the 4th and King platform. Boarding this train takes you eventually to Moscone Center, Union Square, and Chinatown through the brand new Central Subway. The value of this piece of infrastructure as it is currently implemented has been questioned however.</figcaption>
     </figure>
-    <li>Taking the T to Union Square station. Time spent on the train starts when I step on the train, and ends when I step off of it at Union Square station. The T runs about half a mile north on the median of 4th street, obeying traffic lights until it enters the Central Subway just ahead of the intersection on 4th and Bryant streets. Union Square station is the 3rd stop. The T stops at 4th and Brannan, still in the median of 4th street, and then once in the Central Subway, at Yerba Buena / Moscone Center, and then at Union Square / Market Street Station. The T would continue on one more stop to Chinatown Rose Pak station where the line ends. Unforntuately I have no image of the ride.</li>
-    <li>Leaving Union Square station, and heading to the Dewey Monument. Once I step off the train, the stopwatch begins measuring the time spent walking from the platform to the Dewey Monument close by. I took the exit from the platform that directed me to Powell station nearby where I could transfer to the other Muni Metro lines as well as BART. Once past the fare gates, I turned left to the exit at Stockton and Ellis street. I took care not to walk on the escalators.</li>
-    <figure>
-        <img src="leaving_union_square_station.jpg" alt="Leaving Union Square station, and I am greeted by downtown San Francisco at Stockton and Ellis street">
-        <figcaption>As I leave Union Square station I am greeted by downtown San Francisco at Stockton and Ellis street</figcaption>
-    </figure>
-    >
-    <figure>
-        <img src="approaching_union_square_at_stockton_and_geary.jpg" alt="Union Square, at Stockton and Geary">
-        <figcaption>Having walked across two crossings obeying all traffic laws, I approach Union Square at the intersection between Stockton and Geary. The median strip straight ahead is where I will board the bus back to the Caltrain station.</figcaption>
-    </figure>
-   <figure>
-        <img src="approaching_dewey_monument.jpg" alt="Dewey Monument">
-        <figcaption>As I walk up the steps to Union Square, I see the Dewey Monument at the center of the plaza. When I reach it, is when time recording is finally stopped.</figcaption>
-    </figure>
-    </ol>
+
+    <h2>Table of Contents</h2>
+    <p><a href="central_subway_1.html">The Background and the Idea (8/6/24)</a></p>
+    <p><a href="central_subway_2.html">Measuring (Invalidated) Data (8/12/24)</a></p>
     
 </body>
 </html>
