--- a/central_subway_2.html
+++ b/central_subway_2.html
@@ -14,7 +14,7 @@
     <p>I took my first set of data points on 8/8/2024, a Thursday. Note that this article is being written AFTER the data was collected. I arrived at San Francisco 4th and King station around 8:00 AM and after having visited an office that a high school friend was interning at, I proceeded to take data around 8:25 AM. As I described in the previous section "The Experiment", for this day, I took a trip from the 4th and King Caltrain station to the Dewey Monument in Union Square using Muni Metro's T Third Street line, routed through the Central Subway at the centerpiece of this project. I then took Muni's 30 Stockton or 45 Union Stockton bus back to the 4th and King Caltrain station. This was repeated 5 times (quite exhausting to be honest, but still quite fun).</p>
      <figure>
         <img src="caltrain_station_arrival.jpg" alt="Arrived at the Caltrain Station">
-        <figcaption>Picture from when I started measuring data at the Caltrain Station at 4th and King</figcaption>
+        <figcaption>Picture from when I started measuring data at the Caltrain Station at 4th and King. (Picture taken 8/8/24)</figcaption>
      </figure>
     <p>I measured not only the total time between starting point and ending point, but time between any signficant events within the trip as well. This was done by simply pressing "lap" on my stopwatch. All of these times between significant events when added together would equal the total time between the starting and ending point.</p>
     <p>For northbound runs (T Third Street), these times between significant events were:</p>
