--- a/central_subway.html
+++ b/central_subway.html
@@ -11,7 +11,7 @@
     <p>The Central Subway is a new subway tunnel opened for San Francisco's Muni Metro T Third Street Line, connecting the Caltrain regional / commuter line station at 4th and King Street South of Market Street, north to important locations such as Moscone Center, Union Square, and Chinatown. It has been a controversial project however, because of the perceived low returns that the ccompleted project brings relative to the financial investmnet put into it, mainly due to the fact that two important and busy bus routes, the 30 Stockton and 45 Union / Stockton replicate the same route, and in fact, go further than the subway does. In this study, I investigate whether or not the Central Subway really deserves the criticism it gets, and I plan to offer ideas for how it can be improved. Click on the links below in the table of contents to see how the project is progressing so far!</p>
 
  <figure>
-        <img src="t_arrival_4th_and_king_(1).jpg" alt="The T arrives at 4th and King">
+        <img src="image_central_subway_2024-08-08_t_arrival_4th_and_king_(1).jpg" alt="The T arrives at 4th and King">
         <figcaption>A T train arriving at the 4th and King platform. Boarding this train takes you eventually to Moscone Center, Union Square, and Chinatown through the brand new Central Subway. The value of this piece of infrastructure as it is currently implemented has been questioned however (Picture taken 8/8/24).</figcaption>
     </figure>
 
