--- a/central_subway_2.html
+++ b/central_subway_2.html
@@ -68,7 +68,7 @@
     <li>Leaving Union Square station, and heading to the Dewey Monument. Once I step off the train, the stopwatch begins measuring the time spent walking from the platform to the Dewey Monument close by. I took the exit from the platform that directed me to Powell station nearby where I could transfer to the other Muni Metro lines as well as BART. Once past the fare gates, I turned left to the exit at Stockton and Ellis street. I took care not to walk on the escalators.</li>
     <figure>
         <img src="image_central_subway_2024-08-08_leaving_union_square_station.jpg" alt="Leaving Union Square station, and I am greeted by downtown San Francisco at Stockton and Ellis street"
-        <figcaption>As I leave Union Square station I am greeted by downtown San Francisco at Stockton and Ellis street.  (Picture taken 8/8/24)</figcaption>
+        <figcaption>As I leave Union Square station I am greeted by downtown San Francisco at Stockton and Ellis street, by Market Street.  (Picture taken 8/8/24)</figcaption>
     </figure>
     >
     <figure>
