--- a/central_subway_2.html
+++ b/central_subway_2.html
@@ -11,7 +11,19 @@
     <h1>Is Muni’s Central Subway in San Francisco Really Efficient?</h1>
     <h2>2. Measuring (Invalidated) Data (8/22/24)</h2>
     <p><a href="central_subway_1.html">1. Previous Article: Is Muni’s Central Subway in San Francisco Really Efficient? (8/6/24) </a></p>
-    <p>I took my first set of data points on 8/8/2024, a Thursday. Note that this article is being written AFTER the data was collected. It's also worth noting, that though I did do 5 runs, that I figured out upon returning home, that the data I collected was invalidated, since I likely took the wrong exit out of Union Square station on my way to Dewey Monument. I arrived at San Francisco 4th and King station around 8:00 AM and after having visited an office that a high school friend was interning at, I proceeded to take data around 8:25 AM. As I described in the previous section "The Experiment", for this day, I took a trip from the 4th and King Caltrain station to the Dewey Monument in Union Square using Muni Metro's T Third Street line, routed through the Central Subway at the centerpiece of this project. I then took Muni's 30 Stockton or 45 Union Stockton bus back to the 4th and King Caltrain station. This was repeated 5 times (quite exhausting to be honest, but still quite fun).</p>
+    <p>I took my first set of data points on 8/8/2024, a Thursday. Note that this article is being written AFTER the data was collected. It's also worth noting, that though I did do 5 runs, that I figured out during the run, that the data I collected was invalidated, since I likely took the wrong exit out of Union Square station on my way to Dewey Monument. I also struggled to locate exactly the location of the bus stop on my way back on my first run. My second run was marred by me accidentally resetting the stopwatch as I was writing down data and therefore possibly not exact. Upon returning home and looking through Google Maps to locate the exact street names and intersection names in preparation for writing this article, I found that there was another entrance to Union Square station located closer to Union Square than the one I took. Therefore, my data is invalid, as it unfairly adds to the travel time for the subway due to the extended walk from a further exit, as well as the multiple blunders I had in collecting data along the way. Nonetheless, I proceeded to take and analyze the data (so I know what to do when I redo this run soon and because why not) in this article.</p> 
+
+<p> In this article we will cover </p>
+    <ol>
+        <li>A quick explainer of the routes taken in colllecting data.
+        <li>An overview of the northbound run including methods</li>
+        <li>A similar ovewview but this time for the southbound run</li>
+        <li>A display of the data and what went wrong in the data collection</li>
+        <li>Some statistical analysis (though we won't do too much of this as the data is flawed anyway)</li>
+        <li>Some comments for what I would do differently on my next run</li>
+    </ol>
+    
+<p>I arrived at San Francisco 4th and King station around 8:00 AM and after having visited an office that a high school friend was interning at, I proceeded to take data around 8:25 AM. As I described in the previous section "The Experiment", for this day, I took a trip from the 4th and King Caltrain station to the Dewey Monument in Union Square using Muni Metro's T Third Street line, routed through the Central Subway at the centerpiece of this project. I then took Muni's 30 Stockton or 45 Union Stockton bus back to the 4th and King Caltrain station. This was repeated 5 times (quite exhausting to be honest, but still quite fun).</p>
      <figure>
         <img src="image_central_subway_2024-08-08_caltrain_station_arrival.jpg" alt="Arrived at the Caltrain Station">
         <figcaption>Picture from when I started measuring data at the Caltrain Station at 4th and King. (Picture taken 8/8/24)</figcaption>
@@ -81,5 +93,49 @@
     </figure>
     </ol>
 
+
+<p>An overview of the Southbound run involves:</p>
+    <ol>
+    <li>Leaving the Dewey Monument. The stopwatch was started the moment I turned around and left the foot of the monument.</li>
+    <li>Walking to the bus stop at Stockton and Geary streets. Either the 30 Stockton or 45 Union / Stockton will take me back to the Caltrain station. The bus stop for the southbound 30 and 45 is located on a median island strip between a left turning slip lane from Stockton street running south to Geary street running west. </li>
+    <figure>
+        <img src="image_central_subway_2024-08-08_leaving_union_square_headed_to_stockton_and_geary.jpg" alt="Bus stop at Stockton and Geary.">
+        <figcaption>The bus stop as seen from when I approached Union Square. The route out of Union Square to the bus stop and the stop itself is circled in yellow. (Picture taken 8/8/24)</figcaption>
+     </figure>
+     <figure>
+        <img src="image_central_subway_2024-08-08_intersection_at_4th_and_king.jpg" alt="Waiting at the crosswalks at 4th and King streets">
+        <figcaption>Waiting to cross the crosswalks at 4th and King streets. (Picture taken 8/8/24)</figcaption>
+     </figure>
+     <figure>
+        <img src="image_central_subway_2024-08-08_ramp_to_t_platform_4th_and_king.jpg" alt="The ramp to the T platform at 4th and King">
+        <figcaption>The ramp to the T platform at 4th and King in the median of 4th street, looking North towards Union Square. The entrance to the Central Subway is just visible at the center of the image where an overpass and tunnel entrance exists. Note the Caltrain station on the left side. The moment I got over the ramp, "lap" was clicked on my stopwatch, and time spent walking between the Caltrain and T platform stopped recording, and time spent waiting for the T train started recording. (Picture taken 8/8/24)</figcaption>
+     </figure>
+    <li>Waiting for the T Third Street train that would take me to Union Square Station. The moment I get to the T platform, wait time for the T train begins. The wait time for the T ends when I step on the train, and the stopwatch then measures the time I spend on the train to Union Square station.</li>
+    <figure>
+        <img src="image_central_subway_2024-08-08_t_platform_4th_and_king.jpg" alt="The T platform at 4th and King">
+        <figcaption>Standing on the T platform at 4th and King, waiting for my train, looking South at the direction my train will arrive. Headways on the T are 10 minutes, as detailed in "The Background and the Idea". (Picture taken 8/8/24)</figcaption>
+    </figure>
+    <figure>
+        <img src="image_central_subway_2024-08-08_t_arrival_4th_and_king_(1).jpg" alt="The T arrives at 4th and King">
+        <figcaption>The T train arrives at platform. Time spent waiting ends when I step on the train. The stopwatch then starts measuring the time I spent on the train itself. (Picture taken 8/8/24)</figcaption>
+    </figure>
+    <li>Taking the T to Union Square station. Time spent on the train starts when I step on the train, and ends when I step off of it at Union Square station. The T runs about half a mile north on the median of 4th street, obeying traffic lights until it enters the Central Subway just ahead of the intersection on 4th and Bryant streets. Union Square station is the 3rd stop. The T stops at 4th and Brannan, still in the median of 4th street, and then once in the Central Subway, at Yerba Buena / Moscone Center, and then at Union Square / Market Street Station. The T would continue on one more stop to Chinatown Rose Pak station where the line ends. Unforntuately I have no image of the ride.</li>
+    <li>Leaving Union Square station, and heading to the Dewey Monument. Once I step off the train, the stopwatch begins measuring the time spent walking from the platform to the Dewey Monument close by. I took the exit from the platform that directed me to Powell station nearby where I could transfer to the other Muni Metro lines as well as BART. Once past the fare gates, I turned left to the exit at Stockton and Ellis street. I took care not to walk on the escalators.</li>
+    <figure>
+        <img src="image_central_subway_2024-08-08_leaving_union_square_station.jpg" alt="Leaving Union Square station, and I am greeted by downtown San Francisco at Stockton and Ellis street"
+        <figcaption>As I leave Union Square station I am greeted by downtown San Francisco at Stockton and Ellis street, by Market Street.  (Picture taken 8/8/24)</figcaption>
+    </figure>
+    >
+    <figure>
+        <img src="image_central_subway_2024-08-08_approaching_union_square_at_stockton_and_geary.jpg" alt="Union Square, at Stockton and Geary">
+        <figcaption>Having walked across two crossings obeying all traffic laws, I approach Union Square at the intersection between Stockton and Geary. The median strip straight ahead is where I will board the bus back to the Caltrain station. (Picture taken 8/8/24)</figcaption>
+    </figure>
+   <figure>
+        <img src="image_central_subway_2024-08-08_approaching_dewey_monument.jpg" alt="Dewey Monument">
+        <figcaption>As I walk up the steps to Union Square, I see the Dewey Monument at the center of the plaza. When I reach it, is when time recording is finally stopped. (Picture taken 8/8/24)</figcaption>
+    </figure>
+    </ol>
+
+    
 </body>
 </html>
