--- a/central_subway_2.html
+++ b/central_subway_2.html
@@ -97,29 +97,18 @@
 <p>An overview of the Southbound run involves:</p>
     <ol>
     <li>Leaving the Dewey Monument. The stopwatch was started the moment I turned around and left the foot of the monument.</li>
-    <li>Walking to the bus stop at Stockton and Geary streets. Either the 30 Stockton or 45 Union / Stockton will take me back to the Caltrain station. The bus stop for the southbound 30 and 45 is located on a median island strip between a left turning slip lane from Stockton street running south to Geary street running west. </li>
+    <li>Walking to the bus stop at Stockton and Geary streets. Either the 15 Bayview Hunters Point Express, 30 Stockton or 45 Union / Stockton will take me back to the Caltrain station. The bus stop for the southbound 15, 30, and 45 is located on a median island strip between a left turning slip lane from Stockton street running south to Geary street running west. Lap is clicked on the stopwatch when I cross the left turn slip lane and reach the median. I took care to obey all traffic laws. It's easy to walk across the left turn lane, as it's only one lane and as long as you're careful, you could simply jaywalk across it to catch an incoming bus, but for the purpose of fairness, there will be no running or jaywalking.</li>
     <figure>
         <img src="image_central_subway_2024-08-08_leaving_union_square_headed_to_stockton_and_geary.jpg" alt="Bus stop at Stockton and Geary.">
         <figcaption>The bus stop as seen from when I approached Union Square. The route out of Union Square to the bus stop and the stop itself is circled in yellow. (Picture taken 8/8/24)</figcaption>
      </figure>
-     <figure>
-        <img src="image_central_subway_2024-08-08_intersection_at_4th_and_king.jpg" alt="Waiting at the crosswalks at 4th and King streets">
-        <figcaption>Waiting to cross the crosswalks at 4th and King streets. (Picture taken 8/8/24)</figcaption>
-     </figure>
-     <figure>
-        <img src="image_central_subway_2024-08-08_ramp_to_t_platform_4th_and_king.jpg" alt="The ramp to the T platform at 4th and King">
-        <figcaption>The ramp to the T platform at 4th and King in the median of 4th street, looking North towards Union Square. The entrance to the Central Subway is just visible at the center of the image where an overpass and tunnel entrance exists. Note the Caltrain station on the left side. The moment I got over the ramp, "lap" was clicked on my stopwatch, and time spent walking between the Caltrain and T platform stopped recording, and time spent waiting for the T train started recording. (Picture taken 8/8/24)</figcaption>
-     </figure>
-    <li>Waiting for the T Third Street train that would take me to Union Square Station. The moment I get to the T platform, wait time for the T train begins. The wait time for the T ends when I step on the train, and the stopwatch then measures the time I spend on the train to Union Square station.</li>
-    <figure>
-        <img src="image_central_subway_2024-08-08_t_platform_4th_and_king.jpg" alt="The T platform at 4th and King">
-        <figcaption>Standing on the T platform at 4th and King, waiting for my train, looking South at the direction my train will arrive. Headways on the T are 10 minutes, as detailed in "The Background and the Idea". (Picture taken 8/8/24)</figcaption>
-    </figure>
-    <figure>
-        <img src="image_central_subway_2024-08-08_t_arrival_4th_and_king_(1).jpg" alt="The T arrives at 4th and King">
-        <figcaption>The T train arrives at platform. Time spent waiting ends when I step on the train. The stopwatch then starts measuring the time I spent on the train itself. (Picture taken 8/8/24)</figcaption>
-    </figure>
-    <li>Taking the T to Union Square station. Time spent on the train starts when I step on the train, and ends when I step off of it at Union Square station. The T runs about half a mile north on the median of 4th street, obeying traffic lights until it enters the Central Subway just ahead of the intersection on 4th and Bryant streets. Union Square station is the 3rd stop. The T stops at 4th and Brannan, still in the median of 4th street, and then once in the Central Subway, at Yerba Buena / Moscone Center, and then at Union Square / Market Street Station. The T would continue on one more stop to Chinatown Rose Pak station where the line ends. Unforntuately I have no image of the ride.</li>
+    <li>Waiting for the next bus that would take me back, the 15, 30, and 45 buses. Unfortunately I have no image.</li>
+    <li>Taking the bus to the bus stop nearest to the 4th and King Caltrain station. Time spent on the bus starts when I step on the bus, and ends when I step off of it at my destination. The routing of the buses are complicated. 
+        <ul>
+            <li>The 15 bus runs south down Stockton, and once it crosses Market Street, runs straight down 4th street until it reaches the Caltrain station at 4th and King street. Once I get off the bus however, I have to cross King street, the same street I crossed to get to the T platform from the Caltrain station, except this time, I'm crossing in the other direction. The 15 arrives every 12 minutes on weekdays during mornings and midday. [1]</li>
+            <li>The 30 bus has two variants, the 30 short and the 30 long. This is not an issue to us however, as the difference in routing happens north of Union Square. The 30, like the 15 runs straight down 4th street. However, the 30 terminates at the Caltrain station unlike the 15 which continues south. This means that the 30 takes a left at Townsend street to loop around for a northbound run down adjacent 3rd street. Though the Caltrain station is addressed at 4th and King streets, since the station takes up the whole block between King and Townsend streets, the 4th and Townsend bus stop is actually right in front of the Caltrain station. However, as the 4th and Townsend bus stop for the 30 is on the other side of 4th street from the Caltrain station, it requires us to cross Townsend street with a possible traffic light hindering our progress. The 30 short arrives every </li>
+        </ul>
+        
     <li>Leaving Union Square station, and heading to the Dewey Monument. Once I step off the train, the stopwatch begins measuring the time spent walking from the platform to the Dewey Monument close by. I took the exit from the platform that directed me to Powell station nearby where I could transfer to the other Muni Metro lines as well as BART. Once past the fare gates, I turned left to the exit at Stockton and Ellis street. I took care not to walk on the escalators.</li>
     <figure>
         <img src="image_central_subway_2024-08-08_leaving_union_square_station.jpg" alt="Leaving Union Square station, and I am greeted by downtown San Francisco at Stockton and Ellis street"
@@ -136,6 +125,8 @@
     </figure>
     </ol>
 
+<h3>Sources</h3>
+    <p>[1]: https://www.sfmta.com/routes/15-bayview-hunters-point-express</p>
     
 </body>
 </html>
